# whistx

./: .dockerignore  .env.example  .gitignore  ACTION_PLAN.md  CLAUDE.md  CURRENT_STATUS_REPORT.md  Dockerfile  FINAL_REPORT.md  GAP_ANALYSIS.md  IMPROVEMENTS.md  IMPROVEMENT_SPECIFICATION.md  LICENSE  README.md  REPAIR_PLAN.md  alembic.ini  docker-compose.yml  entrypoint.sh  package.json  podman-run.sh  pyproject.toml  requirements-dev.txt  requirements-diarization.txt  requirements.txt  run.sh  start.sh  transcript_correction_feature_plan.md
alembic/: env.py
backend/: adaptive_vad.py  app.py  config.py  llm_service.py  requirements.txt  server.py  transcription.py
docs/: architecture.md  architecture_refactor.md  asr_accuracy_implementation_plan.md  asr_accuracy_improvement_plan.md  https-implementation-spec.md  ui-refresh.md
frontend/: package-lock.json  package.json  vite.config.js
scripts/: container_common.sh  eval_asr.py  load_env.py  load_env.sh  runtime_common.sh
server/: app.py  asr.py  asr_backends.py  audio_pipeline.py  auth.py  config.py  db.py  deps.py  diarizer.py  high_accuracy.py  hotwords.py  langfuse_observer.py  legacy_app.py  metrics.py  models.py  openai_whisper.py  runtime.py  schemas.py  summarizer.py  transcribe_worker.py  transcript_store.py  voxtral_realtime.py
tests/: test_architecture.py  test_asr_pipeline.py  test_config_registry.py  test_eval_asr.py  test_oidc_service.py  test_regressions.py  test_transcription_domain.py
web/: admin.css  admin.html  admin.js  audio-worklet-processor.js  help.html  index.html  main.js  style.css
(+72 files in other folders)
